--- a/QX.conf
+++ b/QX.conf
@@ -13,7 +13,7 @@ dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id
 #running_mode_trigger=filter, filter, kalex-5G:all_direct
 #ssid_suspended_list=kalex-5G
 [dns]
-doh-server = https://doh.opendns.com/dns-query,https://162.14.132.76/dns-query,https://cloudflare-dns.com/dns-query,https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+//doh-server = https://doh.opendns.com/dns-query,https://162.14.132.76/dns-query,https://cloudflare-dns.com/dns-query,https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 //no-ipv6
 //no-system
 
@@ -110,6 +110,7 @@ https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Glo
 #youtube
 #google
 [rewrite_remote]
+https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/nicegram.js, tag=nicegram, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/NobyDa/Script/master/TestFlight/TestFlightAccount.js, tag=TF限制, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/Orz-3/QuantumultX/master/JS_GetCookie.conf, tag=cookie, update-interval=86400, opt-parser=false, enabled=false
 https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/UnlockApp.conf, tag=VIP, update-interval=172800, opt-parser=true, enabled=false
